# changedetection.io-camoufox

./: .dockerignore  .gitignore  README.md  pyproject.toml
changedetection_camofox/: __init__.py  common.py  native_fetcher.py  rest_fetcher.py
docs/: architecture.md
examples/: Dockerfile  docker-compose.yml  smoke_camofox_rest.py
tests/: test_common.py
